pridanie itemC a bootstrapu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
-<h2>Lets's begin this party babyy</h2>
+
+<app-media-item class="row"></app-media-item>
+<app-media-item class="row"></app-media-item>
+<app-media-item class="row"></app-media-item>
