menej staticke info + output a input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 
-<app-media-item class="row"></app-media-item>
-<app-media-item class="row"></app-media-item>
-<app-media-item class="row"></app-media-item>
+<app-media-item  (delete)="onMediaIteamDelete($event)" [mediaItem]="firstMediaItem" class="row"></app-media-item>
+
