--- a/src/app/media-item/media-item.component.css
+++ b/src/app/media-item/media-item.component.css
@@ -2,12 +2,19 @@
   background-color: rgba(54, 56, 56, 0.664);
   box-shadow: 0px 0px 10px rgb(107, 105, 105);
   color: white;
+  border: 2px solid white;
   height: 12rem;
+  border-radius: 0.7rem;
 }
 .item h2 {
+  margin-top: 2px;
   text-align: center;
 }
 .item .info {
   font-weight: 600;
   font-size: 1.05rem;
+  text-align: left;
+}
+.item a {
+  cursor: pointer;
 }
