--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 
-<app-media-item  (delete)="onMediaIteamDelete($event)" [mediaItem]="firstMediaItem" class="row"></app-media-item>
+<app-media-item-list></app-media-item-list>
 
