--- a/src/app/media-item/media-item.component.css
+++ b/src/app/media-item/media-item.component.css
@@ -3,7 +3,7 @@
   box-shadow: 0px 0px 10px rgb(107, 105, 105);
   color: white;
   border: 2px solid white;
-  height: 12rem;
+  height: fit-content;
   border-radius: 0.7rem;
 }
 .item h2 {
