--- a/src/app/media-item/media-item.component.html
+++ b/src/app/media-item/media-item.component.html
@@ -1,10 +1,13 @@
-<div  class="item col-lg-3 col-md-6 col-sm-12 mt-3" > 
+<div class=" ml-5 item col-lg-11 col-md-11 col-sm-12 mt-5" > 
 <div class="info">
 <h2 > {{mediaItem.name}} </h2>
-<div> {{mediaItem.type}} | {{mediaItem.wasWatched}} </div>
+<div> {{mediaItem.type}} </div>
+<ng-template [ngIf]="mediaItem.wasWatched">
+<div> {{ mediaItem.wasWatched }}</div> 
+</ng-template>
 <div> Length of episode: {{mediaItem.lengthOfEpisode}} </div>
 <div> Episodes: {{mediaItem.episodes}}</div>
-<div> Last wacth on:  {{mediaItem.wasWatchedOn}} </div>
+<div> Was watched on:  {{mediaItem.wasWatchedOn}} </div>
 </div>
 <div class="tools">
     
@@ -20,4 +23,5 @@
 
 </div>
 </div>
+
 
