fungujuci grid sice nie zrovna pekne pre ngClass

--- a/src/app/media-item/media-item.component.css
+++ b/src/app/media-item/media-item.component.css
@@ -5,6 +5,7 @@
   border: 2px solid white;
   height: fit-content;
   border-radius: 0.7rem;
+  padding: 4ch 4ch;
 }
 .item h2 {
   margin-top: 2px;
