--- a/src/app/media-item/media-item.component.html
+++ b/src/app/media-item/media-item.component.html
@@ -1,4 +1,4 @@
-<div class=" ml-5 item col-lg-11 col-md-11 col-sm-12 mt-5" > 
+<div class=" ml-3 item col-lg-11  col-md-12 col-sm-12 mt-5" > 
 <div class="info">
 <h2 > {{mediaItem.name}} </h2>
 <div> {{mediaItem.type}} </div>
@@ -9,7 +9,7 @@
 <div> Episodes: {{mediaItem.episodes}}</div>
 <div> Was watched on:  {{mediaItem.wasWatchedOn}} </div>
 </div>
-<div class="tools">
+<div class="tools mt-1">
     
     
     <a class="btn btn-danger ml-1 mr-1" (click)="onDelete()">Remove
