--- a/src/app/media-item-list/media-item-list.component.html
+++ b/src/app/media-item-list/media-item-list.component.html
@@ -1,10 +1,11 @@
 <section>
     <div class="container row">
     
-    <app-media-item class=" col-lg-4 col-md-6 col-sm-12"
+    <app-media-item class=" item col-lg-4  col-md-6 col-sm-12"
      *ngFor="let mediaItem of mediaItems "
       [mediaItem]="mediaItem"
-        (delete)="onMediaItemDelete($event)"></app-media-item>
+        (delete)="onMediaItemDelete($event)"
+        ></app-media-item>
     
 </div>
 </section>
