--- a/src/app/media-item/media-item.component.css
+++ b/src/app/media-item/media-item.component.css
@@ -1,11 +1,12 @@
 .item {
-  background-color: rgba(54, 56, 56, 0.664);
+  background-color: rgba(54, 56, 56, 0.503);
   box-shadow: 0px 0px 10px rgb(107, 105, 105);
-  color: white;
+  color: rgba(255, 255, 255, 0.808);
   border: 2px solid white;
   height: fit-content;
   border-radius: 0.7rem;
   padding: 4ch 4ch;
+  transition: 0.4s;
 }
 .item h2 {
   margin-top: 2px;
@@ -18,4 +19,26 @@
 }
 .item a {
   cursor: pointer;
+}
+.item:hover {
+  background: rgba(54, 56, 56, 0.829);
+  color: white;
+  transform: scale(1.04);
+  border: 3px solid rgb(18, 86, 187);
+  opacity: 100%;
+}
+.item:hover + .item h2 {
+  color: red;
+}
+.fa-star {
+  font-size: 2.2rem;
+  margin-top: 1rem;
+  cursor: pointer;
+  transition: 0.4s;
+}
+.fa-star:hover {
+  font-size: 2.3rem;
+}
+.rate {
+  color: orange;
 }
