form+ts not css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-title></app-title>
-<app-media-item-list></app-media-item-list>
+<!--<app-title></app-title>
+<app-media-item-list></app-media-item-list>-->
+<app-media-item-form></app-media-item-form>
 
