--- a/src/app/media-item-form/media-item-form.component.css
+++ b/src/app/media-item-form/media-item-form.component.css
@@ -1,6 +1,6 @@
 form {
   width: fit-content;
-  box-shadow: 1px 1px 3px rgba(150, 15, 228, 0.733);
+  box-shadow: 0px 0px 4px white;
   padding: 0.21rem;
 }
 form ul li input,
@@ -60,9 +60,9 @@ button {
   background: rgba(83, 22, 153, 0.87);
   padding: 0.5rem 1.1rem;
   border-radius: 2.3rem;
-  color: rgb(130, 130, 219);
+  color: rgb(255, 255, 255);
   font-size: 1.2rem;
-  font-weight: 600;
+  font-weight: 500;
   border: 2px solid rgba(89, 89, 233, 0.64);
   outline: none;
   margin-left: 13rem;
