--- a/src/app/media-item/media-item.component.html
+++ b/src/app/media-item/media-item.component.html
@@ -1,13 +1,19 @@
-<div [ngClass]="{'movies':mediaItem.medium==='movie','series':mediaItem.medium==='series'}"class=" ml-3 item col-lg-11  col-md-12 col-sm-12 mt-5" > 
+<div [ngClass]="{'movies':mediaItem.medium==='Movies','series':mediaItem.medium==='Series'}"class=" ml-3 item col-lg-11  col-md-12 col-sm-12 mt-5" > 
 <div class="info">
 <h2 > {{mediaItem.name }} </h2>
 <div> {{mediaItem.type}} </div>
 <ng-template [ngIf]="mediaItem.wasWatched">
 <div> {{ mediaItem.wasWatched  }}</div> 
 </ng-template>
-<div> Length of episode: {{mediaItem.lengthOfEpisode}} </div>
-<div> Episodes: {{mediaItem.episodes}}</div>
-<div> Was watched on:  {{mediaItem.wasWatchedOn | date:"MMMM YYYY"}} </div>
+<ng-template [ngIf]="mediaItem.lengthOfEP">
+<div> Length of episode: {{mediaItem.lengthOfEP}} </div>
+</ng-template>
+<ng-template [ngIf]="mediaItem.numberOfEp">
+<div> Episodes: {{mediaItem.numberOfEp}}</div>
+</ng-template>
+<ng-template [ngIf]="mediaItem.whenWatched">
+<div> Was watched on:  {{mediaItem.whenWatched }} </div>
+</ng-template>
 </div>
 <div class="tools mt-1 ">
     
