--- a/src/app/media-item/media-item.component.html
+++ b/src/app/media-item/media-item.component.html
@@ -17,11 +17,11 @@
 </div>
 <div class="tools mt-1 ">
     
-    <a class="btn btn-danger ml-1 mr-1  " (click)="onDelete()">Remove
+    <a class="_toolComp rmvbtn btn btn-danger ml-1 mr-1  " (click)="onDelete()">Remove
 
     </a>
 
-    <a class="btn btn-primary mr-1 ml-1 ">Watch
+    <a class="_toolComp wtchbtn btn btn-primary mr-1 ml-1 ">Watch
 
     </a>
     <span class="fa fa-star ml-2" (click)="ratingFunc()"[class.rate]="isRated"></span>
