--- a/src/app/media-item-form/media-item-form.component.css
+++ b/src/app/media-item-form/media-item-form.component.css
@@ -44,6 +44,7 @@ select {
   width: 30%;
   font-size: 1.07rem;
   font-weight: 500;
+  color: black;
 }
 option {
   background: rgba(89, 89, 233, 0.637);
@@ -51,6 +52,7 @@ option {
   border-radius: 0.3rem;
   font-size: 1.07rem;
   font-weight: 500;
+  color: black;
 }
 select:hover {
   background: rgba(89, 89, 233, 0.64);
