--- a/src/app/media-item-form/media-item-form.component.css
+++ b/src/app/media-item-form/media-item-form.component.css
@@ -3,6 +3,9 @@ form {
   box-shadow: 0px 0px 4px white;
   padding: 0.21rem;
 }
+._form {
+  display: none;
+}
 form ul li input,
 form ul li select {
   display: block;
@@ -82,4 +85,10 @@ button:hover {
 
 .borderBot {
   border-bottom: 2px solid rgba(144, 74, 202, 0.76);
+}
+
+.disBtn {
+  margin-top: 0.3rem;
+  margin-bottom: 0.4rem;
+  margin-left: 0rem;
 }
