--- a/src/app/media-item-list/media-item-list.component.html
+++ b/src/app/media-item-list/media-item-list.component.html
@@ -1,8 +1,9 @@
+<input [(ngModel)]="name" class="searchInput" (input)="searchName()" type="text" placeholder="Search by name">
+
 <section>
     <div class="container row">
-    
     <app-media-item class=" item col-lg-4  col-md-6 col-sm-12"
-     *ngFor="let mediaItem of mediaItems "
+     *ngFor="let mediaItem of sortedItems "
       [mediaItem]="mediaItem"
         (delete)="onMediaItemDelete($event)"
         ></app-media-item>
