--- a/src/app/media-item-list/media-item-list.component.html
+++ b/src/app/media-item-list/media-item-list.component.html
@@ -1,4 +1,4 @@
-<input [(ngModel)]="inputVal" class="searchInput" (input)="whatsInside($event.target.value)" (input)="searchName()" type="text" placeholder="Search by name">
+<input [(ngModel)]="inputVal" class="searchInput"  (input)="searchName()" type="text" placeholder="Search by name">
 
 <section>
     <div class="container row">
