--- a/src/app/media-item/media-item.component.html
+++ b/src/app/media-item/media-item.component.html
@@ -25,7 +25,7 @@
     <a class="_toolComp wtchbtn btn btn-primary mr-1 ml-1 ">Watch
 
     </a>
-    <span class="fa fa-star ml-2" (click)="ratingFunc()"[class.rate]="isRated"></span>
+    <span class="fa fa-star ml-2" (click)="ratingFunc()"[class.rate]="mediaItem.star || isRated"></span>
 
 
 </div>
